# numerfold

./: README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
examples/: initial.py  numerfold_example.ipynb  numerfold_example_domains.ipynb
src/numeraifold/: config.py
src/numeraifold/core/: __init__.py  evaluation.py  model.py  training.py
src/numeraifold/data/: __init__.py  dataloader.py  loading.py  preprocessing.py
src/numeraifold/domains/: __init__.py  analysis.py  evaluate.py  identification.py  models.py  visualization.py
src/numeraifold/features/: __init__.py  engineering.py  sequences.py  stability.py
src/numeraifold/pipeline/: __init__.py  configuration.py  execution.py
src/numeraifold/utils/: __init__.py  artifacts.py  batch.py  domain.py  logging.py  seed.py  serialize.py  visualization.py
