[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Increased setuptools version
build-backend = "setuptools.build_meta"

[project]
name = "numeraifold"
version = "0.1.0"
authors = [
  { name = "whit3rabbit", email = "whiterabbit@protonmail.com" },
]
description = "AlphaFold-inspired pipeline for Numerai"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88  # Match black's line length

[tool.flake8]
max-line-length = 88  # Match black
ignore = ["E203", "W503"]  # Common ignores to be compatible with black
exclude = [".git", "__pycache__", "build", "dist", "docs/conf.py"]